k8s/notificaciones/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificaciones
  namespace: mercadourbano
spec:
  selector:
    app: notificaciones
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
