k8s/notificaciones/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mercadourbano-ingress
  namespace: mercadourbano
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: notificaciones.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: notificaciones
                port:
                  number: 3002
